# Avolute

./: .gitignore  Avolute.sln  Avolute.vcxproj  Avolute.vcxproj.filters  Avolute_ideas.txt  CMakeLists.txt  Gempläy.md  README.md  build.py
Avolute/src/Core/: AMath.cpp  AMath.h  Avolute.h  Entity.cpp  Entity.h  RenderWindow.h  Utils.h  main.cpp
include/: Avolute.h  Entity.h  Log.h  RenderWindow.h  Utils.h
scripts/: Cleanup.py  Setup.py  SetupBuildTools.py  SetupClang.py  SetupPython.py  Utils.py
src/: Avolute.cpp  Entity.cpp  RenderWindow.cpp  main.cpp
